// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<div
  className="gf-form-button-row"
>
  <Button
    onClick={[MockFunction]}
    type="submit"
    variant="primary"
  >
    Test
  </Button>
  <Button
    aria-label="Data source settings page Delete button"
    disabled={true}
    onClick={[MockFunction]}
    type="button"
    variant="destructive"
  >
    Delete
  </Button>
  <LinkButton
    buttonStyle="text"
    href="/datasources"
  >
    Back
  </LinkButton>
</div>
`;

exports[`Render should render with buttons enabled 1`] = `
<div
  className="gf-form-button-row"
>
  <Button
    aria-label="Data source settings page Save and Test button"
    disabled={false}
    onClick={[Function]}
    type="submit"
    variant="primary"
  >
    Save & test
  </Button>
  <Button
    aria-label="Data source settings page Delete button"
    disabled={false}
    onClick={[MockFunction]}
    type="button"
    variant="destructive"
  >
    Delete
  </Button>
  <LinkButton
    buttonStyle="text"
    href="/datasources"
  >
    Back
  </LinkButton>
</div>
`;
